@@ -7,6 +7,7 @@ import earth.terrarium.adastra.common.compat.rei.widgets.ReiEnergyBarWidget;
 import earth.terrarium.adastra.common.compat.rei.widgets.ReiFluidBarWidget;
 import earth.terrarium.adastra.common.config.MachineConfig;
 import earth.terrarium.adastra.common.registry.ModBlocks;
+import earth.terrarium.common_storage_lib.resources.fluid.util.FluidAmounts;
 import me.shedaniel.math.Point;
 import me.shedaniel.math.Rectangle;
 import me.shedaniel.rei.api.client.gui.Renderer;
@@ -66,7 +67,7 @@ public class OxygenLoadingCategory implements DisplayCategory<OxygenLoadingDispl
         int cookTime = display.recipe().cookingTime();
         long capacity = FluidAmounts.toPlatformAmount(MachineConfig.STEEL.fluidCapacity);
         widgets.add(new ReiFluidBarWidget(new Point(bounds.x + 37, bounds.y + 53), false, capacity, cookTime, display.recipe().input()
-            .getFluids().get(0).copyWithAmount(display.recipe().input().getFluidAmount())));
+            .getFluids().getFirst().withCount(display.recipe().input().getAmount())));
         widgets.add(new ReiFluidBarWidget(new Point(bounds.x + 94, bounds.y + 53), true, capacity, cookTime, display.recipe().result()));
 
         return widgets;
